--- a/Karol/Properties/Resources.resx
+++ b/Karol/Properties/Resources.resx
@@ -124,6 +124,12 @@
   <data name="BrickUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UI\BrickUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CubeDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UI\CubeDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CubeUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UI\CubeUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MarkDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UI\MarkDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
