--- a/Karol/Core/EditorForm.resx
+++ b/Karol/Core/EditorForm.resx
@@ -57,4 +57,57 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC8
+        CgAAAk1TRnQBSQFMAgEBBAEAAVABAAFQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQAB/wr7
+        AfAEAAHsARUCFAETAhQBFQEUAUMBFAHsCQAEiwFmA4sBZgEUAQAB+QIBAh8DAQHpAgEBGgUAARQK+wQA
+        AewBFQYUARMBFAEVARQB7QgAAYsBrgKLAWUEhgFmAQAB+QgBAh8BAQYAATcJ+wFRAwAB7AEUARMCFAEV
+        AxQBZgIUARUBkgcABIsBZQSLAWYBAAH5BwEBHgMBAUYFAAHzCvsBBwIAAewDFAITAxQBFQQUAZIGAAGL
+        AoYBiwFmA4sBhgFmAQAB+QYBAR4CHwEBAR8BAQG9BQABcwn7ATcCAAHsAhQBSQQUARMBFQFmARQBFQIU
+        Ae0FAAOLAbQEiwJmAQAB+Q0BBgABMAn7AVEBAAHsARMBFAEVAxQBFQIUARMEFAETBQACZwFEAUUBaAJF
+        ASsBJAEqAQAB+QsBAR4BAQFGBQAB8wr7Ae8B7AQUAUMBFAMVAhQBFQIUARMBAAFMAZMBKgEAAUQCPgFF
+        AW8CRgErATEBMgFnAfkOAQG9BQABcwoDAewBFAEVAhQBFQQUARUEFAETAfEBKwIxAT4BRQE/AkYBbwNG
+        AUABPwE+AfkKIAIBAR4CARAAAewCFAEVARQCFQYUAhUBFAIAAf8BRQE/AekDRgFvA0YB6QFAAWcBAAHp
+        CiACAQEeAQEQAAHsAhMBFQQUAhMBFAEVARQBFQIUAwAB8wFFAUADRgFvAkYBPwI+AfMBAAGUByAB6QIg
+        AR8DARAAC+wBFAFDARMBFAETBQABBwFEAUUBMgFTASsBJAEeAUMEAAFGCiADAREAAe0DbQHqAW0C6gJt
+        AesBFAIVARQGAAHzAUsBIgIOAQ8BRAG8BQALIAIBEgAB7QHqAm0B6wHqAW0B6gJtAesCFAETBQAB9wEQ
+        AQ8CEQMOAREFAAG9AekGIAHpAiABHwEBEwAB7QHqAm0B6wZtAhQGAAETAQ4CRAQOBgABRgEgAekDIALp
+        AR8CIAEBFAAB7AHqAesIbQEUBwACDwQOAe0HAAUgAR8EIAH5FQAL7BUAARoK+QFCAU0BPgcAAT4DAAEo
+        AwABQAMAASADAAEBAQABAQYAAQEWAAP/ggABDwEAAQ8B+AEBAQABDwGAAQ8BAAEHAfgBAQEAAQ8BwAEH
+        AQABAwH4AQEBAAEHAcABAwEAAQEB+AEBAQABAwHgAQMCAAH4AQEBAAEDAfABAQIAAfgBAQEAAQEB8AMA
+        AYgDAAH4BwAC/wIAAcABAAGAAQAC/wIAAeABAAGAAQAC/wIAAfgBAwHAAQAC/wGAAQAB/AEDAeABAAL/
+        AcABAAH4AQMB4AEAAv8B4AEAAfwBAwHwAQAC/wHwAQAB/gEDAfgBAAL/AfgBAAL/AfgBAAs=
+</value>
+  </data>
 </root>
