--- a/Karol/Properties/Resources.resx
+++ b/Karol/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="CubeUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UI\CubeUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="KoordinatensystemKreuz" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\KoordinatensystemKreuz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MarkDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UI\MarkDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -252,6 +255,9 @@
   </data>
   <data name="robotS9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\robotS9.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RobotSound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sounds\WEEEEEEEEEE.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="robotW1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\robotW1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
