--- a/Karol/Properties/Resources.resx
+++ b/Karol/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="CubeUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UI\CubeUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Freddy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\Freddy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="KoordinatensystemKreuz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\KoordinatensystemKreuz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
